styles/main.css
/* ------ BODY BORDER ------ */
/* html {
height: 100%;
border: 15px solid #f8f8f8;
} */
/* ------ END BODY BORDER ------ */


/* ------ SCROLL BACKGROUND ------ */
body:before {
  top: 0;
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
}

body:before, body:after {
  background: #52BEEC;
  content: '';
  height: 30rem;
  position: fixed;
  width: 100%;
  z-index: 99999;
}

body:after {
  bottom: 0;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
}
/* ------ END SCROLL BACKGROUND ------ */


h1 {
  color: #52BEEC;
  font-size: 24px;
  font-family: 'Roboto Mono', monospace;
  font-weight: 400;
  letter-spacing: -.25px;
  line-height: 2;
}

h2 {
  font-size: 24px;
  font-family: 'Roboto Mono', monospace;
  font-weight: 400;
  letter-spacing: -0.75px;
  color: #52BEEC;
}

h3 {
  font-size: 14px;
  font-family: 'Roboto Mono', monospace;
  font-weight: 400;
  letter-spacing: 0.25px;
  line-height: 1.4;
  text-transform: uppercase;
  color: #C3C3C3;
  margin: 5px 0px 20px 0px;
}

h4 {
  font-size: 18px;
  font-family: 'Roboto Mono', monospace;
  font-weight: 400;
  letter-spacing: -0.75px;
  color: #5D5D5D;
  text-align: center;
  margin-bottom: 40px;
  text-decoration: underline;
}

h5 {
  font-size: 14px;
  font-family: 'Roboto Mono', monospace;
  font-weight: 400;
  letter-spacing: -0.75px;
  color: #5D5D5D;
  text-align: center;
  margin-top: 30px;
}

h6 {
  font-size: 5rem;
  text-align: center;
  font-family: 'Roboto Mono', monospace;
  font-weight: 400;
  letter-spacing: -.25px;
  line-height: 2;
}

p {
  color: #5D5D5D;
  font-size: 16px;
  font-family: 'Roboto Mono', monospace;
  font-weight: 300;
  letter-spacing: -.25px;
  line-height: 1.5;
}

.invisibutton {
  height: 100px;
}

a.btn {
  background-color: #FFFFFF;
  border: 3px solid #52BEEC;
  border-radius: 60px;
  color: #52BEEC;
  padding: 25px 40px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  margin: 100px 0px 250px;
  cursor: pointer;
  font-family: 'Roboto Mono', monospace;
  font-size: 20px;
  font-weight: 400;
  letter-spacing: 0.25px;
  line-height: 1.4;
  text-transform: uppercase;
}



a.btn:hover {
  box-shadow: inset 0 0 0 5px #D6F3FF;
}

ul {
  padding-left: 18px;
  padding-bottom: 18px;
  border-bottom: 1px solid #d8d8d8;
  color: #5D5D5D;
  font-family: 'Roboto Mono', monospace;
  font-weight: 300;
  letter-spacing: -.25px;
  line-height: 1.5;
  list-style-type: circle;
  min-height: 186px;
}

.back-to-top {
  display: none;
  position: fixed;
  bottom: 50px;
  right: 50px;
  padding: 5px 20px;
  background-color: #FFFFFF;
  border: 3px solid #52BEEC;
  border-radius: 60px;
  color: #52BEEC;
}

a.back-to-top:hover {
  box-shadow: inset 0 0 0 5px #D6F3FF;
  color: #52BEEC;
}

a:hover {
  text-decoration: none;
}

/* a:hover {
cursor: crosshair;
} */

a.anim {
  color: #c3c3c3;
  text-decoration: none;
  border-bottom: 1px solid #c3c3c3;
  padding-bottom: 10px;
  display: inline-block;
}

a.anim:hover {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='Squiggle-svg' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.st0{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23FF294C' stroke-width='1' class='st0' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
  color: #c3c3c3;
  background-position: 0 calc(100% - 1.5px);
  background-size: auto 3px;
  background-repeat: repeat-x;
  padding-bottom: 13px;
  border-bottom: none;
  text-decoration: none;
}

::selection {
  background: yellow;
}

.soc-row {
  font-size: 22px;
}

.soc-icon {
  color: #c3c3c3;
  margin-right: 24px;
  font-size: 26px;
}

.si-drib:hover {
  color: #EA4C89;
  transition: color .2s ease-in;
}

.si-linkedin:hover {
  color: #007BB5;
  transition: color .2s ease-in;
}

.si-insta:hover {
  color: #C32AA3;
  transition: color .2s ease-in;
}

.si-spotify:hover {
  color: #1DB954;
  transition: color .2s ease-in;
}

.si-medium:hover {
  color: rgba(0,0,0,.84);
  transition: color .2s ease-in;
}

.icon-btt {
  font-size: 28px;
}

.anim-body {
  background: #fff;
  text-align: left;
  min-height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 10%;
  margin-bottom: 3%;
}

.port-body {
  margin-bottom: 10%;
}

.rowproto1 {
  margin-top: 140px;
  padding-top: 80px;
  background-color: #FFF3DC;
  max-height: 500px;
}

.imga {
  height: 32px;
  width: 32px;
  margin-bottom: -5px;
}

.linear-wipe {
  background: linear-gradient(321deg, #ff5100, #e700ff, #8216ff, #2fcfff);
  background-size: 800% auto;

  color: #000;
  background-clip: text;
  text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;

  -webkit-animation: shine 10s ease infinite;
  -moz-animation: shine 10s ease infinite;
  animation: shine 10s ease infinite;

}

@-webkit-keyframes shine {
  0% {
    background-position: 0% 13%;
  }
  50% {
    background-position: 100% 88%;
  }
  100% {
    background-position: 0% 13%;
  }
}
@-moz-keyframes shine {
  0% {
    background-position: 0% 13%;
  }
  50% {
    background-position: 100% 88%;
  }
  100% {
    background-position: 0% 13%;
  }
}
@keyframes shine {
  0% {
    background-position: 0% 13%;
  }
  50% {
    background-position: 100% 88%;
  }
  100% {
    background-position: 0% 13%;
  }
}

.row-links {
  display: flex;
  align-items:flex-end;
}

.soc-links {
  text-align: right;
  padding-bottom: 20px;
}

.port-item {
  border-bottom: 1px solid #C3C3C3;
  margin: 50px 0px 50px;
}

.port-thumb {
  background-color: #52BEEC;
  min-height: 50px;
}

.no-pad {
  padding: 0px;
}

.emoji-1 {
  width: 40px;
  height: 40px;
}

.proj-hero {
  width: 100%;
  padding-left: 0px;
  padding-right: 0px;
}

.proj-underline {
  border-bottom: 1px solid #C3C3C3;
  padding: 0px 0px 15px 0px;
  margin: 0px 35px 0px 0px;
}

.proj-header {
  margin-top: -25px;
}

.proj-descrip {
  padding-top: 70px;
}

.role-icons {
  margin: 15px 15px 0px 0px;
}

.sidetxt-r {
  text-align: left;
}

.img-fluid-pad {
  margin-bottom: 80px;
}

.titlerow {
  margin-bottom: 40px;
}

.contentrow {
  margin-bottom: 140px;
}

.appscreenrow {
  max-height: 400px;
}

.ctrcol {
  margin: auto 25%;
}

.img-border {
  border: 1px solid #ddd;
}

.appcontainer {
  position: relative;
  margin-top: 280px;
}

.appicon-col {
  position: absolute;
  z-index:  999;
  left: 0;
  top: -40%;
}

.appicon-size {
  max-width: 20%;
}

.sec-div-wh {
  background-color: #fff;
  padding-top: 40px;
  padding-bottom: 40px;
}

.sec-div-gr {
  background-color: #f1f1f1;
  padding: 80px 0px 80px 0px;
  margin: 150px 0px 150px 0px;
}

.ctrimg {
  display: block;
}

.resp-spacing {
  margin-bottom: 1.5rem;
}


/* -------------------------- BOOTSTRAP EDITS ---------------------------- */




/* -------------------------- RESPONSIVE EDITS ---------------------------- */



/* ------ MEDIUM+ ipad wide ------ */

@media screen and (max-width: 1024px) {
  h1 {
    font-size: 20px;
  }

  p {
    font-size: 13px;
  }

  a.btn {
    margin: 100px 0px 100px;
  }

  .anim-body {
    margin-bottom: 5%;
    margin-top: 5%;
  }

  ul {
    font-size: 14px;
    padding-left: 18px;
    padding-bottom: 18px;
    border-bottom: 1px solid #d8d8d8;
    color: #5D5D5D;
    font-family: 'Roboto Mono', monospace;
    font-weight: 300;
    letter-spacing: -.25px;
    line-height: 1.5;
    list-style-type: circle;
    min-height: 165px;
  }

  .appcontainer {
    position: relative;
    margin-top: 200px;
  }
  
}


/* ------ MEDIUM - IPAD vert ------ */

@media screen and (max-width: 768px) {
  h1 {
    font-size: 20px;
  }

  h3 {
    font-size: 12px;
  }

  p {
    font-size: 13px;
  }

  a.btn {
    margin: 100px 0px 100px;
  }

  .soc-links {
    text-align: right;
    padding-top: 20px;
  }

  .appicon-size {
    max-width: 30%;
  }

  .appcontainer {
    position: relative;
    margin-top: 205px;
  }

  .appicon-col {
    position: absolute;
    z-index:  999;
    left: 0;
    top: -45%;
  }

  .resp-spacing {
    margin-bottom: 1.5rem;
  }


}


/* ------ SMALL (PHONES) ------ */

@media screen and (max-width: 375px) {
  h1 {
    font-size: 20px;
    letter-spacing: -0.1px;
    line-height: 1.85;
  }

  body {
    text-align:center;
  }

  .invisibutton {
    padding: 0px 90px;
    margin: 10px 0px;
  }

  .emoji-1 {
    width: 30px;
    height: 30px;
  }

  .soc-links {
    text-align: center;
  }

  .soc-icon {
    margin: 20px;
  }

  .anim-body {
    margin: 50px 25px 60px 25px;
    width: auto;
  }

  a.btn {
    display: none;
  }

  .port-body {
    margin-top: 15%;
  }

  .port-item {
    border-bottom: 1px solid #C3C3C3;
    margin: 50px 0px 80px;
  }

  .proj-underline {
    margin: 0px;
  }

  .proj-descrip {
    padding-top: 24px;
    text-align: left;
  }

  .smallthumb {
    max-width: 345px;
  }

  .smcolspace {
    margin-top: 30px;
  }

  .titlerow {
    margin-bottom: 20px;
  }

  .sec-div-gr {
    background-color: #f1f1f1;
    padding: 60px 0px 60px 0px;
    margin: 70px 0px 70px 0px;
  }

  .contentrow {
    margin-bottom: 70px;
  }

  h5 {
    font-size: 14px;
    font-family: 'Roboto Mono', monospace;
    font-weight: 400;
    letter-spacing: -0.75px;
    color: #5D5D5D;
    text-align: center;
    margin-top: 30px;
    margin-bottom: 0px;
  }

  .rowproto1 {
    margin-top: 20%;
    padding-top: 20%;
    max-height: 230px;
  }

  .appcontainer {
    position: relative;
    margin-top: 100px;
  }

  .appicon-col {
    position: absolute;
    z-index:  999;
    left: 0;
    top: -50%;
  }

  .appicon-size {
    max-width: 35%;
  }

  .back-to-top {
    display: none;
    position: fixed;
    bottom: 25px;
    right: 25px;
    padding: 0px 15px;
    background-color: #FFFFFF;
    border: 3px solid #52BEEC;
    border-radius: 60px;
    color: #52BEEC;
  }

  ul {
    font-size: 14px;
    padding: 0px 15px 15px;
    border-bottom: 1px solid #d8d8d8;
    color: #5D5D5D;
    font-family: 'Roboto Mono', monospace;
    font-weight: 300;
    letter-spacing: -.25px;
    line-height: 1.5;
    list-style-type: circle;
    min-height: 150px;
    text-align: left;
  }

  .col-lg-6 {
    margin-top:20px;
  }

}

